--- a/index.html
+++ b/index.html
@@ -1,28 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>For Angelica</title> 
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-        <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css">
-    </head>
-    <body>    
-        <nav class="navbar">
-            <div class="navdiv">
-                <div class="logo"><a href="#">ANGELICA</a>
-                <box-icon name='book-content' ></box-icon> </div>
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Get Started</a></li>
-                </ul>   
+<head>
+    <title>CS1B Forum</title> 
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+</head>
+<body>    
+
+    <nav class="navbar">
+        <div class="navdiv">
+            <div class="logo">
+                <a href="#">ANGELICA</a> 
+                <box-icon name='book-content'></box-icon>
             </div>
-        </nav>
-        <main class="content">
-            <h1>This is for us</h1>
-            <hr color="maroon">
-            <p>Our memories will be here</p>
-        </main>
-    </body>
+            <button id="menu-toggle" class="menu-btn">
+                <i class="bi bi-list"></i> <!-- Bootstrap icon for the burger menu -->
+            </button>
+            <ul id="nav-links" class="nav-links">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Get Started</a></li>
+            </ul>   
+        </div>
+    </nav>
+
+    <main class="content">
+        <h1>This is for us</h1>
+        <hr color="maroon">
+        <p>Our memories will be here</p>
+    </main>
+
+    <script>
+        document.getElementById("menu-toggle").addEventListener("click", function () {
+            document.getElementById("nav-links").classList.toggle("active");
+        });
+    </script>
+</body>
 </html>
